feat: changes something

--- a/index.html
+++ b/index.html
@@ -297,12 +297,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/uIF-HQudHEY"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -316,12 +320,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -335,12 +343,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -354,12 +366,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -373,12 +389,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -392,12 +412,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -411,12 +435,16 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                                 <a href="#" class="icon">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                                 <a href="#" class="icon">
                                     <i class="fab fa-behance"></i>
                                 </a>
-                                <a href="#" class="icon">
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/2wfHFjN12bQ?si=6nWuoDnP4VcL_99n"
+                                    class="icon"
+                                >
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -535,7 +563,7 @@
                                         <i class="fas fa-map-marker-alt"></i>
                                         <span>Location</span>
                                     </div>
-                                    <p>: Sylhet, Bangladesh</p>
+                                    <p>: Barisal, Bangladesh</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
@@ -543,7 +571,7 @@
                                         <span>Email</span>
                                     </div>
                                     <p>
-                                        <span>: mmm.munaim@gmail.com</span>
+                                        <span>: kmhossain810@gmail.com</span>
                                     </p>
                                 </div>
                                 <div class="contact-item">
@@ -552,10 +580,7 @@
                                         <span>Education</span>
                                     </div>
                                     <p>
-                                        <span
-                                            >: Sayed Shah Mostofa Degree
-                                            College, Sylhet</span
-                                        >
+                                        <span>: Arabic University</span>
                                     </p>
                                 </div>
                                 <div class="contact-item">
@@ -564,7 +589,7 @@
                                         <span>Mobile Number</span>
                                     </div>
                                     <p>
-                                        <span>: +8801784730595</span>
+                                        <span>: +880 1725-102330</span>
                                     </p>
                                 </div>
                                 <div class="contact-item">
@@ -580,7 +605,7 @@
                             <div class="contact-icons">
                                 <div class="contact-icon">
                                     <a
-                                        href="https://www.facebook.com/munaim.ahmed.munna.2024"
+                                        href="https://web.facebook.com/profile.php?id=100013899214338"
                                         target="_blank"
                                     >
                                         <i class="fab fa-facebook-f"></i>
@@ -589,7 +614,7 @@
                                         <i class="fab fa-twitter"></i>
                                     </a>
                                     <a href="#" target="_blank">
-                                        <i class="fab fa-github"></i>
+                                        <i class="fab fa-linkedin"></i>
                                     </a>
                                     <a href="#" target="_blank">
                                         <i class="fab fa-youtube"></i>
