--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           </div>
           <div class="blogs">
             <div class="blog">
-              <img src="img/port6.jpg" alt="" />
+              <img src="img/port6.png" alt="" />
               <div class="blog-text">
                 <h4>Essential Video Editing Tips for Beginners</h4>
                 <p>
@@ -432,7 +432,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/port1.png" alt="" />
               <div class="blog-text">
                 <h4>Video Editing Workflow Optimization</h4>
                 <p>
@@ -443,7 +443,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/port3.jpg" alt="" />
+              <img src="img/port3.png" alt="" />
               <div class="blog-text">
                 <h4>Trending Video Editing Styles in 2024</h4>
                 <p>
